--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -165,9 +165,9 @@ utilizing the proposed approach.}
 \noindent{\LARGE \textbf{Abstrakt}}
 \vspace{\baselineskip}
 
-\noindent{Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
-systému členěním jeho funkcionality do samostatných služeb. Díky tomu lze
-snáze oddělit zodpovědnost a zvýšit znovupoužitelnost komponent systému.
+\noindent{Architektura orientovaná na služby člení funkcionalitu komplexních
+informačních systémů do samostatných služeb a díky tomu usnadňuje oddělení
+zodpovědností a zvyšuje znovupoužitelnost jednotlivých komponent.
 Byznysová pravidla ale často zasahují do více služeb najednou a vyžadují
 konzistentní vykonávání. To při použití současných přístupů vede k manuální
 duplikaci pravidel, která zvyšuje náklady na vývoj a údržbu systémů.}
