--- a/content/chapter-06-testovani.tex
+++ b/content/chapter-06-testovani.tex
@@ -458,19 +458,17 @@ Manuáln\'{\i} duplikace nav\'{\i}c přináš\'{\i} nutnost synchronizovat podob
 \end{table}
 
 %\goal{V\'yhody frameworku}
-D\'{\i}ky použit\'{\i} navrženého frameworku je však možné každé pravidlo nadefinovat centrálně
+D\'{\i}ky použit\'{\i} navrženého frameworku je však možné každé pravidlo nadefinovat na jednom místě
 a framework se postará o jeho automatickou integraci do všech částí systému, kde má být aplikováno.
 D\'{\i}ky tomu je možno byznysová pravidla, resp. kontexty, spravovat pomoc\'{\i} nástroje pro
 centráln\'{\i} správu, kter\'y je součást\'{\i} navrženého frameworku. Z toho vypl\'yvá
 sn\'{\i}žen\'{\i} nároků na v\'yvoj a sn\'{\i}žené riziko lidské chyby.
 
 %\goal{Nev\'yhody použit\'{\i}}
-Jako nev\'yhodu použit\'{\i} frameworku lze považovat počátečn\'{\i} investici v
-podobě integrace knihoven do služeb systému. Zvážit mus\'{\i}me i cenu popisu byznysov\'ych pravidel
-v \gls{DSL}, kter\'y se musej\'{\i} v\'yvojáři systému naučit nav\'{\i}c oproti programovac\'{\i}mu jazyku,
-ve kterém popisuj\'{\i} služby. Dále je při návrhu systému potřeba identifikovat byznysové kontexty, jejich
-hirearchii a vzájemnou vazbu s byznysov\'ymi pravidly, aby bylo možno framework efektivně využ\'{\i}vat.
-To může vyžadovat v\'{\i}ce času, než klasick\'y návrh.
+Jako nev\'yhodu použit\'{\i} frameworku lze považovat počátečn\'{\i} investici v podobě integrace knihoven do služeb systému.
+Zvážit mus\'{\i}me i cenu popisu byznysov\'ych pravidel v \gls{DSL}, kter\'y se musej\'{\i} v\'yvojáři systému naučit nav\'{\i}c
+oproti programovac\'{\i}mu jazyku, ve kterém popisuj\'{\i} služby. Tento jazyk však mohou používat i doménoví experti a tak
+ulehčit práci vývojářů.
 
 %\goal{Závěr}
 Navržen\'y framework tedy oproti konvenčn\'{\i}mu př\'{\i}stupu nab\'{\i}z\'{\i} možnost z\'{\i}skat dlouhodobě
