--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -286,7 +286,7 @@ v rozporu s požadavky definovanými v sekci~\ref{sec:implementation-requirement
 \subsection{Drools}\label{sec:drools}
 
 Framework Drools\footnote{\url{https://www.drools.org/}} je open-source projekt realizující
-\textit{business rule management engine} (\gls{BRMS}), tedy nástroj pro vývoj a správu byznysových
+\textit{business rule management system} (\gls{BRMS}), tedy nástroj pro vývoj a správu byznysových
 pravidel. Framework umožňuje vývoj tzv. \textit{produkčních systémů} tvořených sadou \textit{produkčních pravidel}.
 Produkční pravidlo se skládá z levé strany (\gls{LHS} z anglického \textit{left-hand side}),
 a z pravé strany (\gls{RHS} z anglického \textit{right-hand side}).
