--- a/content/chapter-06-testovani.tex
+++ b/content/chapter-06-testovani.tex
@@ -460,7 +460,7 @@ Manuáln\'{\i} duplikace nav\'{\i}c přináš\'{\i} nutnost synchronizovat podob
 %\goal{V\'yhody frameworku}
 D\'{\i}ky použit\'{\i} navrženého frameworku je však možné každé pravidlo nadefinovat na jednom místě
 a framework se postará o jeho automatickou integraci do všech částí systému, kde má být aplikováno.
-D\'{\i}ky tomu je možno byznysová pravidla, resp. kontexty, spravovat pomoc\'{\i} nástroje pro
+To umožňuje byznysová pravidla, resp. kontexty, spravovat pomoc\'{\i} nástroje pro
 centráln\'{\i} správu, kter\'y je součást\'{\i} navrženého frameworku. Z toho vypl\'yvá
 sn\'{\i}žen\'{\i} nároků na v\'yvoj a sn\'{\i}žené riziko lidské chyby.
 
