chapter 2 final (maybe)

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -30,8 +30,8 @@ To při použití konvenčního přístupu přináší nutnost manuální duplik
 kódu a tím jsou zvýšeny náklady na vývoj systému a riziko lidské chyby.
 
 %\goal{Motivace a cíle}
-Pomocí popisu byznysových pravidel na jednom místě a jejich následné automatické distribuce
-a integrace do systému by mohly být sníženy náklady na vývoj a údržbu informačních systémů.
+Popsáním byznysových pravidel na jednom místě a jejich následnou automatickou distribucí
+a integrací do služeb systému by mohly být sníženy náklady na vývoj a údržbu informačních systémů.
 Cílem této práce je prozkoumat myšlenku inovativního přístupu k centrální správě
 a automatické integraci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
 a navrhnout framework, který by umožnil uplatnit tento koncept v praxi. K dosažení tohoto cíle musí práce splnit
