--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -221,7 +221,7 @@ Každá služba bude mít lokálně uložen popis byznysových kontextů, které
 k její doméně. Pro snažší přidělení byznysových kontextů ke službám bude v identifikátoru kontextu sloužit
 tzv. \textit{prefix}. Kontexty se stejným prefixem pak budou spravovány výhradně jednou službou. Například kontexty
 služby spravující objednávky budou označeny prefixem \code{order}, zatímco kontexty služby zajišťující fakturaci budou
-označeny prefixem \code{billing}. Může nastat i situace, kdy jedna služba bude spravovat více prefixů.
+označeny prefixem \code{billing}.
 
 \subsection{Registr byznysových kontextů}\label{sec:registry-design}
 
