--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -30,7 +30,7 @@
 \newglossaryentry{KISS}{name=KISS,description={Keep it simple, stupid}}
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
 \newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
-\newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
+\newglossaryentry{MDD}{name=MDD,description={Model-Driver Architecture}}
 \newglossaryentry{MIT}{name=MIT,description={Massachusetts Institute of Technology}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
 \newglossaryentry{NAT}{name=NAT,description={Native Address Translation}}
