--- a/reference.bib
+++ b/reference.bib
@@ -73,7 +73,7 @@
     title = {Automatické generování formulářů v informačních systémech},
     author = {Filip Klimeš},
     year = {2016},
-    publisher = {{\v{C}}esk{\'e} vysok{\'e} u{\v{c}}en{\'\i} technick{\'e} v Praze. Vypo{\v{c}}etn{\'\i} a informa{\v{c}}n{\'\i} centrum.}
+    publisher = {{ \v { C } } esk { \'e } vysok { \'e } u { \v { c } } en { \'\i } technick { \'e } v Praze. Vypo { \v { c } } etn { \'\i } a informa { \v { c } } n { \'\i } centrum.}
 }
 
 @inproceedings{kiczales1997aspect,
@@ -112,7 +112,7 @@
 
 @article{bray1997extensible,
     title = {Extensible markup language (XML).},
-    author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran{\c{c}}ois},
+    author = {Bray, Tim and Paoli, Jean and Sperberg-McQueen, C Michael and Maler, Eve and Yergeau, Fran { \c { c } } ois},
     journal = {World Wide Web Journal},
     volume = {2},
     number = {4},
@@ -219,7 +219,7 @@
     number = {2},
     pages = {86--93},
     year = {2002},
-    publisher = {IEEE}
+    organization = {IEEE}
 }
 
 @article{sprott2004understanding,
@@ -369,7 +369,7 @@
 
 @article{bos1998cascading,
     title = {Cascading style sheets, level 2 CSS2 specification},
-    author = {Bos, Bert and Lie, H{\aa}kon Wium and Lilley, Chris and Jacobs, Ian},
+    author = {Bos, Bert and Lie, H { \aa } kon Wium and Lilley, Chris and Jacobs, Ian},
     journal = {Available via the World Wide Web at http://www. w3. org/TR/1998/REC-CSS2-19980512},
     pages = {1472--1473},
     year = {1998},
@@ -442,6 +442,17 @@
     number = {308},
     pages = {5},
     year = {2000}
+}
+
+@article{selic2003pragmatics,
+    title = {The pragmatics of model-driven development},
+    author = {Selic, Bran},
+    journal = {IEEE software},
+    volume = {20},
+    number = {5},
+    pages = {19--25},
+    year = {2003},
+    organization = {IEEE}
 }
 
 @incollection{pardon2011towards,
@@ -573,7 +584,7 @@
 
 @incollection{czarnecki2000generative,
     title = {Generative programming and active libraries},
-    author = {Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl{\"u}ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
+    author = {Czarnecki, Krzysztof and Eisenecker, Ulrich and Gl { \"u } ck, Robert and Vandevoorde, David and Veldhuizen, Todd},
     booktitle = {Generic Programming},
     pages = {25--39},
     year = {2000},
@@ -682,7 +693,7 @@
 
 @incollection{boyer2011ibm,
     title = {IBM websphere ilog jrules},
-    author = {Boyer, Mr J{\'e}r{\^o}me and Mili, Hafedh},
+    author = {Boyer, Mr J { \'e } r { \^o } me and Mili, Hafedh},
     booktitle = {Agile business rule development},
     pages = {215--242},
     year = {2011},
@@ -811,4 +822,31 @@
     year = {2012},
     publisher = {Springer},
     address = {Cham, Switzerland},
+}
+
+@book{laddad2003aspectj,
+    title = {AspectJ in action: practical aspect-oriented programming},
+    author = {Laddad, Ramnivas},
+    year = {2003},
+    publisher = {Dreamtech Press},
+    address = {New Delhi, India},
+}
+
+@article{boehm1988understanding,
+    title = {Understanding and controlling software costs},
+    author = {Boehm, Barry W and Papaccio, Philip N},
+    journal = {IEEE transactions on software engineering},
+    volume = {14},
+    number = {10},
+    pages = {1462--1477},
+    year = {1988},
+    organization = {IEEE}
+}
+
+@book{graham2008foundations,
+    title = {Foundations of software testing: ISTQB certification},
+    author = {Graham, Dorothy and Van Veenendaal, Erik and Evans, Isabel},
+    year = {2008},
+    publisher = {Cengage Learning EMEA},
+    address = {Andover, United Kingdom},
 }
