new day, new issues

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -34,8 +34,7 @@ Popsáním byznysových pravidel na jednom místě a jejich následnou automatic
 a integrací do služeb systému by mohly být sníženy náklady na vývoj a údržbu informačních systémů.
 Cílem této práce je prozkoumat myšlenku inovativního přístupu k centrální správě
 a automatické integraci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
-a navrhnout framework, který by umožnil uplatnit tento koncept v praxi. K dosažení tohoto cíle musí práce splnit
-následující dílčí úkoly:
+a navrhnout framework, který by umožnil uplatnit tento koncept v praxi. Dílčí cíle práce jsou:
 \begin{enumerate}
     \item Analyzovat problematiku byznysových pravidel v architektuře orientované na služby a provést rešerši stávajících řešení
     \item Navrhnout framework, který umožní centrální správu a automatickou distribuci byznysových pravidel v architektuře orientované na služby
