--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -20,7 +20,7 @@ pomocí centrální správy pravidel a jejich automatické distribuce a integrac
 K tomu využívá aspektově orientovaného programování a na něm založeného
 přístupu \gls{ADDA}.
 
-\section{Splnění stanovených cílů}
+\section{Dosažené výsledky}
 
 %\goal{Naplnění požadavků ze zadání}
 V rámci této práce byly dosaženy cíle stanovené v úvodu práce a byly splněny všechny
