--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -175,11 +175,10 @@ duplikaci pravidel, která zvyšuje náklady na vývoj a údržbu systémů.}
 \vspace{\baselineskip}
 
 \noindent{Tato práce analyzuje problematiku byznysových pravidel v architektuře orientované
-na služby a navrhuje inovativní způsob, jakým lze s využitím aspektově orientovaného
+na služby a navrhuje alternativní způsob, jakým lze s využitím aspektově orientovaného
 programování usnadnit práci vývojářů a administrátorů pomocí centrální správy a
-automatické integrace těchto pravidel. Součástí práce je demonstrace navrženého přístupu na
-ukázkovém příkladu, který prokazuje snížení manuální duplikace na ukázkovém systému využívajícím
-navržený přístup.}
+automatické integrace těchto pravidel. Součástí práce je implementace navrženého přístupu na
+ukázkovém příkladu, který demonstruje snížení manuální duplikace byznysových pravidel.}
 
 \vspace{\baselineskip}
 
